# PyG2O

./: .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  index.html  linux-arm.cmake  linux-arm64.cmake  linux-x64.cmake  linux-x86.cmake  mkdocs.yml  objects.inv  pyproject.toml  windows-x64.cmake  windows-x86.cmake
.github/workflows/: docs_pages.yml  release.yml
classes/game/Daedalus/: index.html
classes/game/DamageDescription/: index.html
classes/game/Sky/: index.html
classes/item/ItemGround/: index.html
classes/item/ItemsGround/: index.html
classes/mds/Mds/: index.html
classes/mds/mds/: index.html
classes/network/Packet/: index.html
classes/waypoint/Way/: index.html
comparing/: index.html
constants/anticheat/: index.html
constants/context/: index.html
constants/damage/: index.html
constants/general/: index.html
constants/hand/: index.html
constants/item/: index.html
constants/network/: index.html
constants/npc/: index.html
constants/reliability/: index.html
constants/skill-weapon/: index.html
constants/talent/: index.html
constants/weapon-mode/: index.html
constants/weather/: index.html
defaultEvents/anticheat/onPlayerUseCheat/: index.html
defaultEvents/general/onBan/: index.html
defaultEvents/general/onExit/: index.html
defaultEvents/general/onInit/: index.html
defaultEvents/general/onTick/: index.html
defaultEvents/general/onTime/: index.html
defaultEvents/general/onUnban/: index.html
defaultEvents/network/onPacket/: index.html
defaultEvents/npc/onNpcActionFinished/: index.html
defaultEvents/npc/onNpcActionSent/: index.html
defaultEvents/npc/onNpcChangeHostPlayer/: index.html
defaultEvents/npc/onNpcCreated/: index.html
defaultEvents/npc/onNpcDestroyed/: index.html
defaultEvents/player/onPlayerChangeColor/: index.html
defaultEvents/player/onPlayerChangeFocus/: index.html
defaultEvents/player/onPlayerChangeHealth/: index.html
defaultEvents/player/onPlayerChangeMana/: index.html
defaultEvents/player/onPlayerChangeMaxHealth/: index.html
defaultEvents/player/onPlayerChangeMaxMana/: index.html
defaultEvents/player/onPlayerChangeWeaponMode/: index.html
defaultEvents/player/onPlayerChangeWorld/: index.html
defaultEvents/player/onPlayerCommand/: index.html
defaultEvents/player/onPlayerDamage/: index.html
defaultEvents/player/onPlayerDead/: index.html
defaultEvents/player/onPlayerDisconnect/: index.html
defaultEvents/player/onPlayerDropItem/: index.html
defaultEvents/player/onPlayerEnterWorld/: index.html
defaultEvents/player/onPlayerEquipAmulet/: index.html
defaultEvents/player/onPlayerEquipArmor/: index.html
defaultEvents/player/onPlayerEquipBelt/: index.html
defaultEvents/player/onPlayerEquipHandItem/: index.html
defaultEvents/player/onPlayerEquipHelmet/: index.html
defaultEvents/player/onPlayerEquipMeleeWeapon/: index.html
defaultEvents/player/onPlayerEquipRangedWeapon/: index.html
defaultEvents/player/onPlayerEquipRing/: index.html
defaultEvents/player/onPlayerEquipShield/: index.html
defaultEvents/player/onPlayerEquipSpell/: index.html
defaultEvents/player/onPlayerJoin/: index.html
defaultEvents/player/onPlayerMessage/: index.html
defaultEvents/player/onPlayerMobInteract/: index.html
defaultEvents/player/onPlayerRespawn/: index.html
dependencies/: CMakeLists.txt
dependencies/sqrat/include/: sqmodule.h
dependencies/squirrel/squirrel/: CMakeLists.txt
docs/: comparing.md  howtobuild.md  index.md  mkdocs.yml  qna.md
docs/constants/: context.md  damage.md  general.md  hand.md  item.md  network.md  skill-weapon.md  weapon-mode.md
docs/defaultEvents/: onBan.md  onExit.md  onInit.md  onTick.md  onTime.md  onUnban.md
docs/events/: addEvent.md  callEvent.md  event.md  removeEvent.md  removeEventHandler.md  toggleEvent.md
g2o/: __init__.py  damage.py  events.py  items.py  packets.py
g2o/classes/: daedalus.py  items.py  mds.py  packets.py  sky.py
g2o/constants/: context.py  damage.py  general.py  hand.py  item.py  network.py  npc.py  reliability.py  skillweapon.py  weaponmode.py
g2o/functions/: npc.py  player.py
howto/localdebug/: index.html
include/: events.nut  main.nut  messages.nut  pyg2o.xml
python/: mkdocs.yml
python/docs/: comparing.md  index.md
python/g2o/: __init__.py
qna/: index.html
search/: search_index.json
source/: CMakeLists.txt  bind.cpp  bind.h  main.cpp
source/NoNut/: CMakeLists.txt  LICENSE  README.md
source/NoNut/include/: Function.h  Property.h  StaticClass.h  StringHelpers.h  Stringify.h  UserData.h  Utils.h
source/NoNut/source/: Class.cpp  Constant.cpp  StaticClass.cpp
source/classes/: CMakeLists.txt
source/classes/python/: Daedalus.h  DamageDescription.h  ItemGround.h  ItemsGround.h  Mds.h  Packet.h  Sky.h  Way.h
source/classes/squirrel/: Daedalus.cpp  Daedalus.h  DamageDescription.cpp  DamageDescription.h  ItemGround.cpp  ItemGround.h  ItemsGround.cpp  ItemsGround.h  Mds.cpp  Mds.h  Packet.cpp  Packet.h  Sky.cpp  Sky.h  Way.cpp  Way.h
source/constants/: CMakeLists.txt  sqconstants.cpp  sqconstants.h
source/dependencies/: CMakeLists.txt
source/events/: CMakeLists.txt  sqevents.cpp  sqevents_anticheat.cpp  sqevents_general.cpp  sqevents_network.cpp  sqevents_npc.cpp  sqevents_player.cpp
source/functions/: CMakeLists.txt
source/functions/python/: functions.cpp
source/functions/squirrel/: functions.cpp  functions.h
source/types/: CMakeLists.txt  Dictionary.cpp
src/: bind.cpp  main.cpp  pch.h  sqcontainers.cpp  sqcontainers.h  sqevents.cpp  sqevents.h  sqmain.cpp  sqmodule_api.cpp  sqmodule_api.h
src/api/: module_api.h  squirrel_api.h
src/classes/: Dictionary.cpp  Dictionary.h
src/constants/: sqconstants.cpp
src/events/: sqevents.cpp  sqevents.h  sqevents_anticheat.cpp  sqevents_general.cpp  sqevents_network.cpp  sqevents_npc.cpp  sqevents_player.cpp
src/functions/: pyfunctions.cpp  pyfunctions.h  sqfunctions.cpp  sqfunctions.h
src/pyg2o/: __init__.py  call_repr.py  exception.py  logger.py  serialize.py  server.py
(+469 files in other folders)
